# data-catalog-sparql-playground

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  playwright.md  pyproject.toml  query.html  run-server.sh  toggle-hosts.sh
data-catalog-sparql-playground/: catalog.json  query.html  sparnatural-yasgui-plugins.js
data-catalog-sparql-playground/data/: example.ttl
data-catalog-sparql-playground/queries/: category-stats.sparql  geo-points.sparql  list-things-grid.sparql  list-things.sparql
tests/: ui.spec.ts
